--- a/src/Component2/Pages/Profile/Profile.css
+++ b/src/Component2/Pages/Profile/Profile.css
@@ -157,6 +157,14 @@
         height: 90vh;
         background-color: aliceblue;
     }
+    .ProfileDescWrap{
+        width: 90%;
+        height: 100%;
+        border: 2px solid #0455B4;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
 
 @media screen and (max-width: 426px) {
