--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
@@ -20,6 +20,8 @@
     align-items: center;
     justify-content: space-between;
 }
+/* HomeDashboard.css */
+
 .AdminUserIcon{
     display: none;
 }
