--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssign.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssign.css
@@ -161,14 +161,15 @@
         font-size: 13px;
 
     }
-    .user-card {
-        width: 70%;
+    .AdminTaskAssignSelect .user-card {
+        width: 90%;
         height: 50%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         padding: 16px;
+        /* background-color: #a52525; */
         background-color: #f5f5f5;
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -176,7 +177,6 @@
         cursor: pointer;
         text-decoration: none;
         gap: 10px;
-        /* flex-wrap: wrap; */
       }
       
       .user-card:hover {
@@ -218,7 +218,7 @@
       .AdminTaskAssignCreateTaskButton{
         width: 100%;
         height: 25%;
-        background-color: #81b7f5;
+        /* background-color: #81b7f5; */
       }
       .AdminTaskAssignCreateTaskButton button{
         width: 80%;
