--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssignPage/AdminTaskAssignPAge.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssignPage/AdminTaskAssignPAge.css
@@ -2,6 +2,7 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
+    gap: 20px;
   }
   
   .task-form {
@@ -21,6 +22,7 @@
     border: none;
     padding: 8px 16px;
     cursor: pointer;
+    padding-top: 10px;
   }
   
   .task-list {
@@ -49,6 +51,51 @@
     font-size: 14px;
     color: #666;
   }
+  .AdmintaskoverviewStatus{
+    width: 39%;
+    height: 100%;
+    /* background-color: black; */
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    gap: 10px;
+}
+.Admintaskoverviewcolor1{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+.Admintaskoverviewcolor2{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+.Admintaskoverviewcolor3{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
   
 
 
