--- a/src/Component2/UserDashboard/UserDashLeft/UserDashLeft.css
+++ b/src/Component2/UserDashboard/UserDashLeft/UserDashLeft.css
@@ -81,15 +81,24 @@
 }
 
 .user {
-    width: 80%;
-    height: 5%;
+    width: 100%;
+    height: 10%;
     /* background-color: black; */
     font-family: 'poppins, sans-serif';
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     font-size: 25px;
     color: white;
+    cursor: pointer;
+    gap: 10px;
+    padding-left: 10px;
+}
+
+.user:hover{
+    background-color: white;
+    color: #0455B4;
+    border-radius: 5px;
     cursor: pointer;
 }
 
