--- a/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriterDesc/AdminAllWriterDesc.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriterDesc/AdminAllWriterDesc.css
@@ -6,24 +6,42 @@
     align-items: center;
     justify-content: center;
 }
-.user-card{
-    width: 40%;
-    height: 80%;
-    /* background-color: black; */
-}
-.user-info{
-    width: 100%;
-    height: 100%;
-    /* background-color: blue; */
+.user-card1{
+    width: 30%;
+    height: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+    cursor: pointer;
+    text-decoration: none;
 }
-.user-card .btn{
-    width: 80px;
-    height: 40px;
-    background-color: red;
-}
+.user-card1:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .user-info1 {
+    flex: 1;
+    text-align: center;
+  }
+  
+  .user-info1 h1 {
+    margin: 0;
+    font-size: 24px;
+    color: black;
+  }
+  
+  .user-info1 p {
+    margin: 8px 0;
+    font-size: 16px;
+    color: #666;
+  }
 .writerdscwrap{
     width: 80%;
     height: 20vh;
@@ -31,29 +49,40 @@
     display: flex;
     justify-content: space-between;
 }
+.user-card1 button{
+    width: 70%;
+    height: 30%;
+    background-color: red;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
 
 @media screen and (max-width: 426px) {
     .writerdsc{
         width: 100%;
         height: 50vh;
-        background-color: yellow;
+        /* background-color: yellow; */
     }
-    .user-card{
+    .user-card1{
         width: 80%;
         height: 80%;
-        background-color: pink;
+        /* background-color: pink; */
     }
 }
 @media screen and (max-width: 768px) {
     .writerdsc{
         width: 100%;
         height: 50vh;
-        background-color: yellow;
+        /* background-color: yellow; */
     }
-    .user-card{
+    .user-card1{
         width: 80%;
         height: 80%;
-        background-color: pink;
+        /* background-color: pink; */
     }
     .user-card .btn{
         width: 170px;
