--- a/src/Component2/Pages/Profile/AdminChangePassword/AdminChangePassword.css
+++ b/src/Component2/Pages/Profile/AdminChangePassword/AdminChangePassword.css
@@ -51,4 +51,39 @@
   .input-container button:hover {
     background-color: #0056b3;
   }
+
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: aliceblue;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    z-index: 1000;
+    animation: fadeInOut 3s ease-in-out;
+  }
+  
+  @keyframes fadeInOut {
+    0% {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(0.8);
+    }
+    50% {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1.05);
+    }
+    100% {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(0.8);
+    }
+  }
+  
+  .popup p {
+    margin: 0;
+    font-size: 16px;
+    color: #333333;
+  }
   
