--- a/src/Component2/UserDashboard/UserDahRight/UserDashHome/UserDashHome.css
+++ b/src/Component2/UserDashboard/UserDahRight/UserDashHome/UserDashHome.css
@@ -1,11 +1,18 @@
 .home-dashboard {
+  width: 100%;
+  height: 90vh;
     padding: 20px;
+    /* background-color: pink; */
     background-color: #f8f8f8;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
   }
   
   .dashboard-header {
+    width: 100%;
+    height: 15%;
+    /* background-color: yellow; */
     text-align: center;
     /* margin-bottom: 20px; */
     gap: 5px;
@@ -18,6 +25,9 @@
   }
   
   .dashboard-content {
+    width: 100%;
+    height: 80%;
+    /* background-color: gray; */
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -26,7 +36,9 @@
   .task-management,
   .profile-update {
     width: calc(50% - 20px);
+    height: 50%;
     padding: 20px;
+    /* background-color: rgb(159, 236, 18); */
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -51,5 +63,59 @@
     height: auto;
     margin-top: 10px;
     border-radius: 5px;
+  }
+
+  @media screen and (max-width: 426px) {
+    .home-dashboard{
+      width: 100%;
+      height: 90vh;
+      /* background-color: pink; */
+    }
+    .dashboard-header {
+      width: 100%;
+      height: 15%;
+      /* background-color: yellow; */
+      text-align: center;
+      /* margin-bottom: 20px; */
+      gap: 5px;
+    }
+    .dashboard-content {
+      width: 100%;
+      height: 85%;
+      /* background-color: gray; */
+      display: flex;
+      justify-content: center;
+      /* flex-wrap: wrap; */
+    }
+    .task-management{
+      width: 80%;
+      height: 49%;
+      /* background-color: blue; */
+    }
+    .task-management p{
+      display: none;
+    }
+    .task-management img{
+      width: 100%;
+      height: 80%;
+      object-fit: cover;
+      /* background-color: red; */
+      margin-bottom: 60%;
+    }
+    .profile-update{
+      width: 80%;
+      height: 49%;
+      /* background-color: purple; */
+    }
+    .profile-update p{
+      display: none;
+    }
+    .profile-update img{
+      width: 100%;
+      height: 80%;
+      object-fit: cover;
+      /* background-color: red; */
+      margin-bottom: 60%;
+    }
   }
   
