--- a/src/Component2/UserDashboard/UserPage.css
+++ b/src/Component2/UserDashboard/UserPage.css
@@ -23,3 +23,18 @@
     height: 100%;
     /* background-color: rgb(168, 231, 7); */
 }
+
+@media screen and (max-width: 426px) {
+.UserDashBoardLeftRight {
+    width: 100%;
+    height: 100vh;
+    /* background-color: goldenrod; */
+}
+.RightHolder{
+    width: 100%;
+    height: 100%;
+}
+    .leftHolder{
+        display: none;
+    }
+}
