--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
@@ -9,51 +9,60 @@
     gap: 10px;
     padding: 10px;
 }
-.Admintaskassigner{
+.AdmintaskoverviewStatus{
+    /* width: 50%;
+    height: 100%;
+    background-color: rgb(135, 66, 66);
+    display: flex;
+    flex-direction: column; */
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    /* width: 300px; */
+    width: 40%;
+    height: 10vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    /* margin: 10px; */
+}
+.AdmintaskoverviewStatusWrap{
     width: 100%;
-    height: 20%;
-    background-color: rgb(207, 207, 207);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-}
-.Admintaskassignerwrap{
-    width: 85%;
-    height: 90%;
-    /* background-color: rgb(0, 242, 255); */
-    display: flex;
-    justify-content: space-between;
-    
-}
-.Admintaskassigntext{
-    width: 59%;
     height: 100%;
     /* background-color: yellow; */
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    gap: 10px;
-}
-.Admintaskassigntext p{
-    color: green;
-    font-size: 18px;
+    align-items: center;
     justify-content: center;
 }
-.AdmintaskoverviewStatus{
-    width: 39%;
-    height: 100%;
-    /* background-color: black; */
+.AdmintaskoverviewStatus h2{
+    width: 100%;
+    height: 30%;
+    /* background-color: blue; */
+    /* margin-bottom: 30%; */
+}
+.AdmintaskoverviewStatus .Admintaskoverviewcolor1{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #f39c12;
     display: flex;
     align-items: center;
-    justify-content: center ;
-    gap: 10px;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+    /* margin-bottom: 70%; */
 }
-.Admintaskoverviewcolor1{
-    width: 50px;
-    height: 50px;
+.Admintaskoverviewcolor1 h4{
+    color: #f39c12;
+}
+.AdmintaskoverviewStatus .Admintaskoverviewcolor2{
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    background-color: red;
+    background-color: #3498db;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -61,21 +70,9 @@
     font-weight: 700;
     color: white;
 }
-.Admintaskoverviewcolor2{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: yellow;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
-}
-.Admintaskoverviewcolor3{
-    width: 50px;
-    height: 50px;
+.AdmintaskoverviewStatus .Admintaskoverviewcolor3{
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-color: green;
     display: flex;
@@ -85,42 +82,38 @@
     font-weight: 700;
     color: white;
 }
+.colorWrap{
+    width: 100%;
+    height: 100%;
+    /* background-color: pink; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
 .Taskss{
     width: 100%;
-    height: 40%;
+    height: 60%;
     background-color: rebeccapurple;
     display: flex;
+}   
+.Taskss1{
+    width: 100%;
+    height: 100%;
+    background-color: #0455B4;
+    display: flex;
+    padding: 10px;
 }
 .task {
-    background-color: white;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 300px;
+    /* width: 300px; */
+    width: 30%;
+    /* height: 30vh; */
     text-align: center;
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    /* margin-top: 60px; */
   }
-  
-  .start-btn,
-  .complete-btn {
-    background-color: #3498db;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    padding: 8px 16px;
-    margin: 4px;
-    cursor: pointer;
-  }
-  
-  .description {
-    font-style: italic;
-    color: #666;
-  }
-  
-  .started {
-    color: #27ae60;
-  }
-  
-  .completed {
-    color: #e74c3c;
-}
