--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverviewMedia.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverviewMedia.css
@@ -50,7 +50,7 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        background-color: red;
+        background-color: #f39c12;;
         display: flex;
         align-items: center;
         justify-content: center;
