--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
@@ -117,3 +117,13 @@
     gap: 20px;
     /* margin-top: 60px; */
   }
+  .UserName1{
+    width: 100%;
+    /* height: 50vh; */
+    border: 1px solid #0455B4;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    justify-content: center;
+    padding-top: 20px;
+}
