--- a/src/Authentication/LoginPage/Login.css
+++ b/src/Authentication/LoginPage/Login.css
@@ -82,7 +82,11 @@
 }
 
 .forgotpassword{
-    /* background-color: gray; */
+    width: 80%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
     color: #0455B4;
 }
 
