--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
@@ -46,7 +46,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: #f39c12;
+    background-color: #fdd835;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,13 +56,13 @@
     /* margin-bottom: 70%; */
 }
 .Admintaskoverviewcolor1 h4{
-    color: #f39c12;
+    color: #fdd835;
 }
 .AdmintaskoverviewStatus .Admintaskoverviewcolor2{
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: #3498db;
+    background-color: #4caf50;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -74,7 +74,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: green;
+    background-color: #2196f3;
     display: flex;
     align-items: center;
     justify-content: center;
