--- a/src/Component2/Pages/ConatctUs/Contact Us.css
+++ b/src/Component2/Pages/ConatctUs/Contact Us.css
@@ -1,14 +1,51 @@
-.main{
-    width: 100%;
-    height: 80vh;
+.content-wrap {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 60px;
+    /* background-color: pink; */
     display: flex;
-    align-items: center;
-}
-.mainwrap{
-    width: 70%;
-    height: 90%;
-    border: 2px solid #0455B4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .contact-page {
+    height: 100vh;
+    background-color: #0455B4;
+  }
+  
+  .contact-card {
+    /* background: #b06666; */
+    background: #c6c2c2;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    margin: 5px;
+    /* display: flex;
+    gap: 20px; */
+  }
+  
+  .fas {
+    font-size: 26px;
+    color: #333;
+  }
+  
+  .team {
+    background: #f9f9f9;
+    padding: 50px 0;
+  }
+  
+  .member {
+    background: #fff;
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);  
+    margin: 20px;
+  } 
+  
+  
+  
+  @media (max-width: 768px) {
+    .contact-cards {
+      flex-direction: column; 
+    }
+  }
