--- a/src/Component/Header/Head.css
+++ b/src/Component/Header/Head.css
@@ -5,21 +5,26 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: pink;
     }
     
     .headerwrap{
         width: 90%;
         height: 100%;
+        background-color: gray;
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     }
     .Logo{
-        width: 20%;
-        height: 100%;
+        /* width: 20%; */
+        /* height: 90%; */
         display: flex;
         align-items: center;
+        background-color: yellow;
+    }
+    .Logo img{
+        width: 100%;
+        height: 100%;
+        /* object-fit: contain; */
     }
     
     .Logo button {
@@ -32,8 +37,9 @@
     }
     
     .centerNav{
-        width: 50%;
-        height: 80%;
+        /* width: 50%; */
+        /* height: 80%; */
+        background-color: black;
     }
     
     .centerNav ul{
@@ -42,6 +48,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        background-color: green;
+    }
+    .CTA1 {
+        background-color: #93c1f6;
+        /* width: 20%; */
+        /* height: 90%; */
     }
     
     .centerNav ul li {
@@ -75,6 +87,10 @@
         border-radius: 3px;
         cursor: pointer;
     }
+
+    .CTA img {
+        display: none;
+    }
     
     .sidebarDiv{
         display: none;
@@ -86,93 +102,8 @@
   
 }
 
-/* @media screen and (max-width: 768px) {
-    header{
-        width: 100%;
-        height: 8vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 3px;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    }
-    
-    .headerwrap{
-        width: 95%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .Logo{
-        width: 20%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .Logo img {
-        width: 100%;
-        height: 72px;
-        cursor: pointer;
-    }
-    
-    .centerNav{
-        width: 70%;
-        height: 80%;
-    }
-    
-    .centerNav ul{
-        width: 80%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        font-size: 13px;
-    }
-    
-    .centerNav ul li {
-        list-style-type: none;
-        cursor: pointer;
-    }
-    
-    .usericons{
-        display: flex;
-        align-items: center;
-        gap: 3px;
-    }
-    
-    .user{
-        font-size: 20px;
-    }
-    
-    .CTA{
-        width: 15%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-    }
-    
-    .CTA button {
-        width: 100%;
-        height: 70%;
-        border: none;
-        background-color: #0455B4;
-        color: white;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-    
-    .sidebarDiv{
-        display: none;
-    }
-    
-    .ham{
-        display: none;
-    }
-    
+/* @media (min-width: 769px) and (max-width: 1284px){
+
 } */
 
 @media screen and (max-width: 426px) {
